Update setting UI

--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -15,10 +15,10 @@
 
         <SettingsField Label="@SettingsLocalization["Session Timeout"]">
 
-            <MudNumericField Label="@SettingsLocalization["Session Timeout"]" HelperText="Time in minute" TValue="int?" @bind-Value="@settings.SessionTimeout" />
+            <MudNumericField Label="@SettingsLocalization["Session Timeout"]" HelperText="Time in minute" T="int?" @bind-Value="@settings.SessionTimeout" />
 
         </SettingsField>
-
+        @*
         <MudText>Duo Security MFA (optional)</MudText>
         <br />
         <SettingsField Label="Duo ClientID">
@@ -35,7 +35,7 @@
 
             <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost" />
 
-        </SettingsField>
+        </SettingsField>*@
         <SettingsField>
 
             <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
