--- a/BLAZAM/Pages/Install/Authentication.razor
+++ b/BLAZAM/Pages/Install/Authentication.razor
@@ -77,6 +77,7 @@
             if (settings.Id == 0)
                 Context.AuthenticationSettings.Add(settings);
 
+                settings.AdminPassword = EncryptionService.EncryptObject(confirmedPassword);
             await Context.SaveChangesAsync();
             StepCompleted.InvokeAsync();
 
