--- a/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
@@ -1,67 +1,77 @@
 ﻿@inherits SettingsComponents
 
 
-    <MudText Typo="Typo.h4">@SettingsLocalization["Update Settings"]</MudText>
-    <MudForm @onsubmit="Save">
+<MudText Typo="Typo.h4">@SettingsLocalization["Update Settings"]</MudText>
+<MudForm @onsubmit="Save">
 
 
-            @if (settings != null)
-            {
+    @if (settings != null)
+    {
 
-                <SettingsField Label="@SettingsLocalization["Update Branch"]">
-
-                    <MudSelect @bind-Value=@settings.UpdateBranch>
-                        @foreach (var val in updateBranches)
-                        {
-                            <MudSelectItem Value="@val">@val</MudSelectItem>
-                        }
-                    </MudSelect>
-
+        <SettingsField Label="@SettingsLocalization["Update Branch"]">
+            <MudSelect @bind-Value=@settings.UpdateBranch HelperText="The stable branch is the recommended branch. Choosing Nightly is only recommended for test installations. Dev is only for developers.">
+                @foreach (var val in updateBranches)
+                {
+                    <MudSelectItem Value="@val">@val</MudSelectItem>
+                }
+            </MudSelect>
 
 
-                </SettingsField>
+
+        </SettingsField>
 
 
         <SettingsField Label="@SettingsLocalization["Update"]">
 
-             
+            <FieldLabel>
+                <MudText>
+                    @SettingsLocalization["Update"]
+                </MudText>
+                <MudIconButton Color="Color.Primary"
+                           OnClick=@(()=>{appUpdateComponent.GetLatestUpdate();})
+                           Icon="@Icons.Material.Filled.Refresh" />
 
-                    <ManualApplicationUpdater />
+            </FieldLabel>
+            <ChildContent>
 
+                <ManualApplicationUpdater @ref=appUpdateComponent />
 
-                </SettingsField>
-
-
-                <SettingsField Label="@SettingsLocalization["Allow Auto Update"]">
-
-                    <MudSwitch @bind-Checked=@(settings.AutoUpdate) />
-
-                </SettingsField>
-
-
-                @if (settings?.AutoUpdate == true)
-                {
-                    <SettingsField Label="@SettingsLocalization["Auto Update Time"]">
-
-                        <MudTimePicker HelperText="The time of each day to automatically apply an update."
-                              
-                               @bind-Time="@settings.AutoUpdateTime" />
+            </ChildContent>
 
 
-                    </SettingsField>
+        </SettingsField>
 
 
-                }
+        <SettingsField Label="@SettingsLocalization["Allow Auto Update"]">
+
+            <MudSwitch @bind-Checked=@(settings.AutoUpdate) />
+
+        </SettingsField>
 
 
-                <SettingsField>
+        @if (settings?.AutoUpdate == true)
+        {
+            <SettingsField Label="@SettingsLocalization["Auto Update Time"]">
 
-                    <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+                <MudTimePicker HelperText="The time of each day to automatically apply an update."
+                       @bind-Time="@settings.AutoUpdateTime" />
 
-                </SettingsField>
-            }
-    </MudForm>
+
+            </SettingsField>
+
+
+        }
+
+
+        <SettingsField>
+
+            <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+        </SettingsField>
+    }
+</MudForm>
 @code {
+    ManualApplicationUpdater appUpdateComponent;
     AppSettings? settings = new AppSettings();
     List<string> updateBranches = new() { ApplicationReleaseBranches.Stable, ApplicationReleaseBranches.Nightly, ApplicationReleaseBranches.Dev };
     protected override async Task OnInitializedAsync()
