--- a/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
+++ b/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
@@ -49,7 +49,7 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        Modal.OnYes += AssignToGroup;
+        Modal.OnYes = AssignToGroup;
         Modal.YesText = UserLocalization["Assign"];
         Modal.Title = "Assign Member";
         Modal.YesEnabled = ValidateModal;
