--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -46,7 +46,7 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Modal.OnYes += SaveChanges;
+        Modal.OnYes = SaveChanges;
         Modal.YesText = UserLocalization["Change Password"];
         Modal.Title = "Change Password";
 
