--- a/BLAZAM/Pages/Configure/Fields.razor
+++ b/BLAZAM/Pages/Configure/Fields.razor
@@ -36,13 +36,13 @@
 </AppModal>
 @code {
     AppModal? addFieldModal;
-    IEnumerable<ActiveDirectoryField> ADFields { get; set; }
+    IEnumerable<CustomActiveDirectoryField> ADFields { get; set; }
     protected override async void OnInitialized()
     {
         base.OnInitialized();
-        ADFields = await Context.ActiveDirectoryFields.ToListAsync();
+        ADFields = await Context.CustomActiveDirectoryFields.ToListAsync();
     }
-    async Task FieldCreated(ActiveDirectoryField newField)
+    async Task FieldCreated(CustomActiveDirectoryField newField)
     {
         
     }
