--- a/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
+++ b/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
@@ -24,6 +24,7 @@
 
             <MudTextField Label="@SettingsLocalization["Server"]"
                       HelperText="Can be your domain name in most environments"
+                      For="(()=>settings.ServerAddress)"
                       @bind-Value="@settings.ServerAddress">
 
 
@@ -63,6 +64,7 @@
             <MudNumericField HelperText="@helperText"
                          Label="@SettingsLocalization["Port"]"
                          HideSpinButtons="true"
+                         For="(()=>settings.ServerPort)"
                          @bind-Value="@settings.ServerPort" />
 
 
@@ -80,7 +82,8 @@
 
     <SettingsField Label="@SettingsLocalization["Username"]">
 
-        <MudTextField Label="@SettingsLocalization["Username"]" name="username" @bind-Value="@settings.Username">
+        
+        <MudTextField For="(()=>settings.Username)" Label="@SettingsLocalization["Username"]" name="username" @bind-Value="@settings.Username">
 
 
 
@@ -92,7 +95,7 @@
 
     <SettingsField Label="@SettingsLocalization["Password"]">
 
-        <MudTextField Label="@SettingsLocalization["Password"]" name="password" InputType="InputType.Password" @bind-Value="@settings.Password">
+        <MudTextField For="(()=>settings.Password)" Label="@SettingsLocalization["Password"]" name="password" InputType="InputType.Password" @bind-Value="@settings.Password">
 
 
 
@@ -104,7 +107,7 @@
 
     <SettingsField Label="@SettingsLocalization["UseTLS"]">
 
-        <MudSwitch Label="@SettingsLocalization["UseTLS"]" @bind-Checked="@settings.UseTLS" />
+        <MudSwitch For="(()=>settings.UseTLS)" Label="@SettingsLocalization["UseTLS"]" @bind-Checked="@settings.UseTLS" />
 
     </SettingsField>
 
@@ -112,7 +115,7 @@
 
     <SettingsField Label="@SettingsLocalization["FQDN"]">
 
-        <MudTextField Label="@SettingsLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
+        <MudTextField For="(()=>settings.FQDN)" Label="@SettingsLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
 
     </SettingsField>
 
@@ -120,7 +123,7 @@
 
     <SettingsField Label="@SettingsLocalization["Base DN"]">
 
-        <MudTextField Label="@SettingsLocalization["Base DN"]" name="baseDN" @bind-Value="@settings.ApplicationBaseDN" />
+        <MudTextField For="(()=>settings.ApplicationBaseDN)" Label="@SettingsLocalization["Base DN"]" name="baseDN" @bind-Value="@settings.ApplicationBaseDN" />
 
     </SettingsField>
 
