--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -42,7 +42,7 @@
                     <MudIconButton OnClick=Unlock Icon=@Icons.Material.Filled.Lock />
                 }
                 <MudHidden Breakpoint="Breakpoint.Sm">
-                <MudToolBar Style="height:32px" DisableGutters Dense>
+                    <MudToolBar Style="height:32px" DisableGutters Dense>
                     @if ((User.Enabled && User.CanDisable) || (User.Disabled && User.CanEnable))
 
                         {
@@ -296,15 +296,15 @@
                                         <MudText Typo="Typo.subtitle2">Groups</MudText>
 
                                         <MudList Dense=true Clickable="true" Style="max-height:200px; overflow-y:auto;">
-                                            @foreach (ADGroup g in User.MemberOf.Where(group => group.CanRead).OrderBy(g=>g.CanonicalName))
+                                            @foreach (ADGroup g in User.MemberOf.Where(group => group.CanRead).OrderBy(g => g.CanonicalName))
                                             {
                                                 if (g.CanRead)
                                                 {
                                                     <MudListItem>
                                                         <ChildContent>
                                                             <MudStack Row=true>
-                                                            <MudLink OnClick="@(()=>{Nav.NavigateTo(g.SearchUri);})">@g.CanonicalName</MudLink>
-                                                            <MudSpacer/>
+                                                                <MudLink OnClick="@(()=>{Nav.NavigateTo(g.SearchUri);})">@g.CanonicalName</MudLink>
+                                                                <MudSpacer />
                                                                 <MudIconButton OnClick="@(()=>{User.UnassignFrom(g);})" Class="align-end align-middle" Color=Color.Error Icon="@Icons.Material.Filled.Close" />
                                                             </MudStack>
                                                         </ChildContent>
@@ -644,7 +644,15 @@
                     </Section>
                 }
 
-
+                @if (User.CanReadAnyCustomFields)
+                {
+                    <Section Title="Additional Field">
+                        @foreach (var field in CustomFields)
+                        {
+                           <CustomDirectoryField Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.ProfilePath)) Entry="User" Field="@field"/>
+                        }
+                    </Section>
+                }
 
 
 
@@ -667,7 +675,7 @@
 
 
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     SetSubHeader? subHeader;
     string Password;
     string ConfirmPassword;
