Improve Session Timeout

--- a/BLAZAM/Shared/UI/AppModal.razor
+++ b/BLAZAM/Shared/UI/AppModal.razor
@@ -4,7 +4,7 @@
         <MudText Typo="Typo.h6">
             @*<MudIcon Icon="@Icons.Material.Filled.DeleteForever" Class="mr-3 mb-n1" />*@
             @Title
-            <AppCloseButton Style="float:right;" OnClick="Hide"/>
+            @*<AppCloseButton Style="float:right;" OnClick="Hide"/>*@
         </MudText>
     </TitleContent>
     <DialogContent>
